Properly set Java Home Directory